css/main.css
/* ... */
.entry__post-nav li {
    display: block;
    margin: 0;
    padding: 0;
    width: 49%;
}

.entry__post-nav li a {
    color: #3e3e3e;
}

.entry__post-nav li strong {
    display: block;
}

.entry__post-nav li.next {
    float: right;
    text-align: right;
}

.entry__post-nav li.prev {
    float: left;
    text-align: left;
}

/* -------------------------------------------------------------------
 * ## post-list-nav
 * ------------------------------------------------------------------- */
.post-list-nav {
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    -ms-flex-flow: row wrap;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    flex-flow: row wrap;
    padding-top: 2.4rem;
    margin-bottom: 4rem;
    border-top: 1px solid #efefef;
}

.post-list-nav a:first-child {
    margin-right: .8rem;
}

.post-list-nav a[rel="prev"], .post-list-nav a[rel="next"] {
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    font-size: 1.422rem;
    line-height: 1.6rem;
    text-transform: uppercase;
    letter-spacing: .2rem;
    color: #000000;
    background-color: #efefef;
    padding: 1.2rem 2rem;
    border-radius: 4px;
}

.post-list-nav a[rel="prev"]:hover, 
.post-list-nav a[rel="prev"]:focus, 
.post-list-nav a[rel="next"]:hover, 
.post-list-nav a[rel="next"]:focus {
    color: #ffffff;
    background-color: #795548;
}

/* -------------------------------------------------------------------
 * ## comments 
 * ------------------------------------------------------------------- */
.comments-wrap {
    padding: 6.4rem 0 0 0;
}

.comments-wrap h3 {
    margin-top: 0;
}

.comments-wrap h3 span {
    display: block;
    font-weight: 400;
    font-size: 1.6rem;
    color: #a7a7a7;
    margin-top: .4rem;
}

/* comments
 * -------------------------------------------------- */
#comments {
    padding-top: 4rem;
    padding-bottom: 1.2rem;
    border-top: 1px solid #efefef;
}

#comments ol, #comments ul {
    list-style: none;
}

.commentlist {
    margin: 6rem 0 5.6rem;
    padding: 0;
}

.commentlist>.comment {
    position: relative;
    list-style: none;
    margin: 0;
    padding: 2rem 0 0 0;
    padding-left: 14%;
}

.comment__avatar {
    position: absolute;
    left: 0;
    display: block;
}

.comment__avatar img {
    height: 6rem;
    width: 6rem;
    border-radius: 100%;
    vertical-align: bottom;
}

.comment__info {
    position: relative;
}

.comment__info .comment__author {
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-size: 1.8rem;
    line-height: 1.778;
    font-style: normal;
    color: #272727;
}

.comment__meta {
    font-family: "Open Sans", sans-serif;
    font-style: normal;
    font-size: 1.422rem;
    line-height: 2rem;
    letter-spacing: .2rem;
    text-transform: uppercase;
    color: #a7a7a7;
}

.comment__meta .comment__time, .comment__meta .comment__reply {
    display: inline-block;
}

.comment__meta .comment__time {
    margin-right: .8rem;
}

.comment__meta .comment__reply a {
    font-weight: 600;
    color: #272727;
}

.comment__text {
    clear: both;
    margin: 1.6rem 0 0 0;
}

.comment ul.children {
    margin: 0;
    padding: 0;
}

.comment ul.children li {
    padding-left: 5%;
    margin-top: calc(3.2rem + 2rem);
    border-left: 1px solid rgba(0, 0, 0, 0.15);
}

/* comments form
 * ---------------------------- */
.comments-wrap .comment-respond {
    margin-top: 6.4rem;
}

.comment-respond form {
    padding-top: 4rem;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * blog styles and blog components
 * ------------------------------------------------------------------- */
@media screen and (max-width:900px) {
    .post-list-nav {
        -ms-flex-pack: justify;
        -webkit-box-pack: justify;
        justify-content: space-between;
    }
}

@media screen and (max-width:800px) {
    .comment__avatar img {
        margin-top: 0;
        height: 5.2rem;
        width: 5.2rem;
    }
}

@media screen and (max-width:600px) {
    .entry__header {
        text-align: center;
    }
    .entry__post-nav li {
        display: block;
        width: 100%;
    }
    .entry__post-nav li.next, .entry__post-nav li.prev {
        float: none;
        text-align: left;
    }
    .commentlist>.comment {
        padding-top: 0;
        padding-left: 0;
    }
    .comment__avatar {
        display: none;
    }
    .comment ul.children li {
        margin-top: calc(3.2rem + 0rem);
    }
}

@media screen and (max-width:400px) {
    .comments-wrap, .comment-respond form {
        padding-top: 3.2rem;
    }
    .comment ul.children li {
        border-left: none;
    }
}

